--- a/blog-master/src/app/hero/hero.component.html
+++ b/blog-master/src/app/hero/hero.component.html
@@ -1,12 +1,13 @@
 <div class="hero-container">
+  <div class="gradient-overlay"></div>
   <img [src]="currentImage" alt="Main Image" class="hero-image">
   <div class="image-overlay">
-    <p>{{currentDate}}</p>
-    <h1>{{currentTitle}}</h1>
-    <p>{{currentDescription}}</p>
+    <p>{{ currentDate }}</p>
+    <h1>{{ currentTitle }}</h1>
+    <p>{{ currentDescription }}</p>
     <div class="nav-buttons">
-      <button class="prev-btn" (click)="prev()">Prev</button>
-      <button class="next-btn" (click)="next()">Next</button>
-    </div>
+      <button class="btn btn-custom" (click)="onPrevClick()">&#8249; Previous</button>
+      <button class="btn btn-custom" (click)="onNextClick()">Next &#8250;</button>
+    </div>    
   </div>
 </div>
