--- a/blog-master/src/app/home/home.component.html
+++ b/blog-master/src/app/home/home.component.html
@@ -1,1 +1,30 @@
-<p>home works!</p>
+<div class="main-container">
+    <div class="left-half">
+      <app-hero 
+        [currentImage]="currentContentSet.currentImage" 
+        [currentDate]="currentContentSet.currentDate" 
+        [currentTitle]="currentContentSet.currentTitle" 
+        [currentDescription]="currentContentSet.currentDescription" 
+        [prev]="prev.bind(this)" 
+        [next]="next.bind(this)">
+      </app-hero>
+    </div>
+    <div class="right-half">
+      <div class="content-inner">
+        <div class="article-header">
+          <h2>{{ currentContentSet.currentAuthor }}</h2>
+          <p>{{ currentContentSet.currentCategory }}</p>
+        </div>
+        <div class="article-content">
+          <p>{{ currentContentSet.currentContent }}</p>
+          <img [src]="currentContentSet.currentArticleImage" alt="Article Image" class="article-image">
+          <div class="quote">{{ currentContentSet.currentQuote }}</div>
+          <p>{{ currentContentSet.currentAdditionalContent }}</p>
+          <div class="additional-images">
+            <img *ngFor="let img of currentContentSet.currentAdditionalImages" [src]="img" alt="Additional Image" class="additional-image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
