--- a/blog-master/src/app/latest-posts/latest-posts.component.html
+++ b/blog-master/src/app/latest-posts/latest-posts.component.html
@@ -2,18 +2,7 @@
   <h2 class="text-center mb-5">Latest Blog Posts</h2>
   <div class="row">
     <div class="col-md-4 mb-4" *ngFor="let post of posts">
-      <div class="card">
-        <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
-        <div class="card-body">
-          <div class="blog-meta mb-2 text-muted">
-            <span class="me-2"><i class="bi bi-person"></i> {{ post.author }}</span> |
-            <span class="me-2"><i class="bi bi-calendar"></i> {{ post.date }}</span> |
-            <span class="me-2"><i class="bi bi-eye"></i> {{ post.views }}</span>
-          </div>
-          <h5 class="card-title">{{ post.title }}</h5>
-          <a href="#" class="btn btn-outline-dark">Read More</a>
-        </div>
-      </div>
+      <app-blog-card [blog]="post"></app-blog-card>
     </div>
   </div>
 </div>
