--- a/blog-master/src/app/navbar/navbar.component.html
+++ b/blog-master/src/app/navbar/navbar.component.html
@@ -1,10 +1,8 @@
 <div class="navbar-container">
-  <div class="logo">Behold</div>
+  <div class="logo">Food Blog</div>
   <nav>
-    <a href="#">Home</a>
-    <a href="#">Pages</a>
-    <a href="#">Posts</a>
-    <a href="#">Shop</a>
-    <a href="#">See All</a>
+    <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/cuisines" routerLinkActive="active">Cuisines</a>
+    <a routerLink="/about" routerLinkActive="active">About</a>
   </nav>
 </div>
