--- a/blog-master/src/app/navbar/navbar.component.html
+++ b/blog-master/src/app/navbar/navbar.component.html
@@ -1,8 +1,4 @@
 <div class="navbar-container">
-  <div class="logo">Food Blog</div>
-  <nav>
-    <a routerLink="/home" routerLinkActive="active">Home</a>
-    <a routerLink="/cuisines" routerLinkActive="active">Cuisines</a>
-    <a routerLink="/about" routerLinkActive="active">About</a>
-  </nav>
+  <a routerLink="/home" class="nav-logo">Tech Blog</a> 
+  <nav class="navbar"></nav>
 </div>
